--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "express": "^4.18.2",
     "firebase-admin": "^11.11.1",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "ngrok": "^5.0.0-beta.2",
     "pg": "^8.10.0",
-    "sequelize": "^6.31.1"
+    "sequelize": "^6.31.1",
+    "sharp": "^0.33.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
