--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "ngrok": "^5.0.0-beta.2",
     "pg": "^8.10.0",
     "sequelize": "^6.31.1",
-    "sharp": "^0.33.1"
+    "sharp": "^0.33.1",
+    "firebase": "^9.16.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
