--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
     "axios": "^1.6.3",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "date-fns": "^3.3.1",
     "dotenv": "^16.0.3",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
+    "firebase": "^9.16.0",
     "firebase-admin": "^11.11.1",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "ngrok": "^5.0.0-beta.2",
     "pg": "^8.10.0",
     "sequelize": "^6.31.1",
-    "sharp": "^0.33.1",
-    "firebase": "^9.16.0"
+    "sharp": "^0.33.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
