--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "^9.16.0",
     "firebase-admin": "^11.11.1",
     "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "ngrok": "^5.0.0-beta.2",
     "pg": "^8.10.0",
