--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "ngrok": "^5.0.0-beta.2",
     "pg": "^8.10.0",
     "sequelize": "^6.31.1",
-    "sharp": "^0.33.1"
+    "sharp": "^0.33.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
